--- a/src/kubernetes/petclinic.deploy.yaml
+++ b/src/kubernetes/petclinic.deploy.yaml
@@ -1,3 +1,60 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: beats-config
+data:
+  filebeat.yml: |
+    filebeat.inputs:
+    - type: log
+      paths:
+        - /home/spring/petclinic.log
+
+    filebeat.config:
+      modules:
+        path: ${path.config}/modules.d/*.yml
+        reload.enabled: false
+
+    processors:
+    - add_cloud_metadata: ~
+    - add_kubernetes_metadata:
+        default_indexers.enabled: false
+        default_matchers.enabled: false
+        indexers:
+          - ip_port:
+        matchers:
+          - fields:
+              lookup_fields: ['destination.ip', 'server.ip']
+
+    output.logstash:
+      hosts: ["logstash-logstash-headless:5044"]
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: logback-config
+data:
+  logback.xml: |
+    <configuration>
+      <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
+        <encoder>
+          <pattern>%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } --- [%t] %-40.40logger{39} : %m%n</pattern>
+        </encoder>
+      </appender>
+
+      <appender name="FILE" class="ch.qos.logback.core.FileAppender">
+          <file>/home/spring/petclinic.log</file>
+          <append>true</append>
+          <encoder>
+            <pattern>%d{${LOG_DATEFORMAT_PATTERN:-yyyy-MM-dd HH:mm:ss.SSS}} ${LOG_LEVEL_PATTERN:-%5p} ${PID:- } --- [%t] %-40.40logger{39} : %m%n</pattern>
+          </encoder>
+      </appender>
+
+      <root level="INFO">
+        <appender-ref ref="STDOUT" />
+        <appender-ref ref="FILE" />
+      </root>
+    </configuration>
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -14,8 +71,36 @@ spec:
       labels:
         app: petclinic
     spec:
+      volumes:
+        - name: logs-vol
+          emptyDir: { }
+        - name: beats-config-vol
+          configMap:
+            name: beats-config
+        - name: logback-config-vol
+          configMap:
+            name: logback-config
+
       containers:
+        - name: beats
+          image: docker.elastic.co/beats/filebeat:7.13.2
+          volumeMounts:
+            - name: logs-vol
+              mountPath: /home/spring/
+            - name: beats-config-vol
+              mountPath: /usr/share/filebeat/filebeat.yml
+              subPath: filebeat.yml
+
         - name: petclinic
-          image: jmgoyesc/juan-goyes-petclinic
+          image: jmgoyesc/juan-goyes-petclinic:25
           ports:
             - containerPort: 8080
+          env:
+            - name: LOGGING_CONFIG
+              value: app/logback.xml
+          volumeMounts:
+            - name: logs-vol
+              mountPath: /home/spring/
+            - name: logback-config-vol
+              mountPath: /app/logback.xml
+              subPath: logback.xml
